--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <dl>
             <dt><h2>Обо мне</h2></dt>
-            <dd>Front-End Разработчик меньше, чем с 1 годом опыта. Пишу на <b>HTML5, CSS3, JavaScript, GitHub</b>. Не работал в компаниях.
+            <dd>Front-End Разработчик меньше, чем с 1 годом опыта. Пишу на <b>HTML5, CSS3, TailwindCss</b>. Не работал в компаниях.
                 Готов к коммуникациям на английском языке. Мне 16 лет. <br>
                 Ответственный за свою часть работы. Делаю все качествеено, и самое главное в срок! Живу в Краснодаре.
                 Готов к любой работе, (на расстоянии, либо же на месте, в компании)</dd>
@@ -49,8 +49,7 @@
                         <h4>
                             <li>Html</li>
                             <li>Css</li>
-                            <li>JavaScript</li>
-                            <li>GitHub</li>
+                            <li>Tailwind Css</li>
                         </h4>
                     </ol> <br> <br>
                 </li>
@@ -72,7 +71,7 @@
 
             <dl>
                 <dt><h2>Опыт до профессиональной разработки</h2></dt>
-                <dd>1. Сверстал 5 проектов, с использоованиме Html, Css, JavaScript</dd>
+                <dd>1. Сверстал 7 проектов, с использоованиме Html, Css, TailwindCss</dd>
                 <dd>2. Есть опыт работы с Figma</dd>
                 <dd>3. Планирую создать своего телеграм бота на Python</dd>
             </dl> <br> <br> <br> <br>
@@ -81,7 +80,7 @@
 
             <dl>
                 <dt><h2>Образование</h2></dt>
-                <dd><h3>22.04.2022 - 12.10.23 (в сумме около 190 дней)</h3></dd>
+                <dd><h3>22.04.2022 - 12.10.23 (в сумме около 250 дней)</h3></dd>
                 <dd>Начинающий специалист в верстке. Учусь в Кооператовном Краснодарском Колледже на программиста. <br>
                     Дополнительно занимаюсь дома (каждый день) и прохожу офлайн курсы</dd>
 </html>
