--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <dl>
             <dt><h2>Обо мне</h2></dt>
-            <dd>Front-End Разработчик меньше, чем с 1 годом опыта. Пишу на <b>HTML5, CSS3,, SCSS, TailwindCss</b>. Не работал в компаниях.
+            <dd>Front-End Разработчик меньше, чем с 1 годом опыта. Пишу на <b>HTML5, CSS3, SCSS, TailwindCss</b>. Не работал в компаниях.
                 Готов к коммуникациям на английском языке. Мне 16 лет. <br>
                 Ответственный за свою часть работы. Делаю все качествеено, и самое главное в срок! Живу в Краснодаре.
                 Готов к любой работе, (на расстоянии, либо же на месте, в компании)</dd>
